internet: fix clearance

--- a/content/blog/2025-12-09-internet.md
+++ b/content/blog/2025-12-09-internet.md
@@ -86,9 +86,9 @@ But we all know, even CloudFlare itself, that this decision is just like throwin
 
 There is more to a story on this forum saga, including post-CloudFlare looking for BGP session on [LowEndTalk](https://lowendtalk.com/discussion/182253/kiwi-farms-bgp-announcements/)(authwall). And more Tier-1 ISPs intervene with the site directly, that's the story for another day.
 
-But there isn't just CloudFlare that is intervening with content directly. There are many more DDoS protection companies out there that choose to play their own game of policing their customers. Such as Path.net, which has also disputed with the same forum. Though **I don't want to mention the same forum over and over, as that created bias toward one party or another**. But there isn't really a great example of when the big internet turned you over, with such big publicity and public stunts by both Forum admin and Management within the ISP.
+Although, there isn't just CloudFlare that is intervening with content directly. There are many more DDoS protection companies out there that choose to play their own game of policing their customers. Such as Path.net, which has also disputed with the same forum. Though **I don't want to mention the same forum over and over, as that created bias toward one party or another**. But there isn't really a great example of when the big internet turned you over, with such big publicity and public stunts by both Forum admin and Management within the ISP.
 
-But the selective termination, like these examples, doesn't lead to the betterment of the internet at all, as the **terminations are mostly done without legal grounds, but rather moral grounds of society at the time**. Also, that just creates another question of why this site is allowed, and why this isn't? It also creates an excuse for a third party to request intervention, either.
+The selective termination, like these examples, doesn't lead to the betterment of the internet at all, as the **terminations are mostly done without legal grounds, but rather moral grounds of society at the time**. Also, that just creates another question of why this site is allowed, and why this isn't? It also creates an excuse for a third party to request intervention, either.
 
 As stated by the EFF[^6]:
 
@@ -98,7 +98,7 @@ As stated by the EFF[^6]:
 
 Despite all this, DDOS and **the Content Policy alone aren't the only reasons causing harm to internet independence**. But the ever-growing trends of government attacking the legality of encryption, enforcement of forced decryption, and controlling the accessibility of the site using KYC by preferring security over privacy, and the risks of data leaks. 
 
-While this isn't directly harming the internet independence, it is **indirectly harming the availability of content, the same way DDoS does**, but instead, being enforced by the government rather than the Bad Actor disagreeing with the site content, and in some way might be worse than DDoS directly. **As one can always seek shelter with providers, but another's depends on the visitor's technological knowledge to be able to access**.
+While this isn't directly harming the internet independence, it is **directly harming the availability of content, the same way DDoS does**, but instead, being enforced by the government rather than the Bad Actor disagreeing with the site content, and in some way might be worse than DDoS directly. **As one can always seek shelter with providers, but another's depends on the visitor's technological knowledge to be able to access**.
 
 In the closing, I'm not the first one talking on this topic. There are many people concerned about these topics before, and yet **no one has a possible solution to this**, me either. But one thing we know is that if we keep these trends ongoing, along with the surge of LLM content scrapers in recent years. then Fuck it, the internet is dead.
 
