--- a/content/blog/2025-12-09-internet.md
+++ b/content/blog/2025-12-09-internet.md
@@ -68,9 +68,9 @@ While supposedly, AISURU has shifted its interests into Resident Proxies, as pub
 
 Undoubtedly, as the size of attack is growing rapidly, especially in 2025, causing **the on-premises or In-House solutions to not be feasible anymore**, and that hugely contributed to the increasing number of users residing in commercial Reverse proxies in recent years.
 
-In my opinion, this might not be the intended outcome by the preparator(While we see many cases, the preparator is someone within the mitigation company who does that to sell service to customers, but we'll rule that out for this article). And the cost of DaaS(DDOS as a Service) is not cheap either, as a result, targets are mostly big companies' infrastructure, or some Minecraft server. But **the panic is real** and is imminent.
+In my opinion, this might not be the intended outcome by the prepetrator(While we see many cases, the preparator is someone within the mitigation company who does that to sell service to customers, but we'll rule that out for this article). And the cost of DaaS(DDOS as a Service) is not cheap either, as a result, targets are mostly big companies' infrastructure, or some Minecraft server. But **the panic is real** and is imminent.
 
-I understand why peoples prefers the security of a site over the diversity of the internet, but that still **unintentionally increases the criticality of a single company to the internet**. therefore giving the control over content policing to a single company, and one simple outage can cause a worldwide disruption, as we unavoidably experienced last month.
+I understand why peoples choosee the security of their site over diversity of the internet, but that still **unintentionally increases the criticality of a single company to the internet**. therefore giving the control over content policing to a single company, and one simple outage can cause a worldwide disruption, as we unavoidably experienced last month.
 
 # The "Content Policing" Trends
 
