internet: fix typo

--- a/content/blog/2025-12-09-internet.md
+++ b/content/blog/2025-12-09-internet.md
@@ -70,7 +70,7 @@ Undoubtedly, as the size of attack is growing rapidly, especially in 2025, causi
 
 In my opinion, this might not be the intended outcome by the prepetrator(While we see many cases, the preparator is someone within the mitigation company who does that to sell service to customers, but we'll rule that out for this article). And the cost of DaaS(DDOS as a Service) is not cheap either, as a result, targets are mostly big companies' infrastructure, or some Minecraft server. But **the panic is real** and is imminent.
 
-I understand why peoples choosee the security of their site over diversity of the internet, but that still **unintentionally increases the criticality of a single company to the internet**. therefore giving the control over content policing to a single company, and one simple outage can cause a worldwide disruption, as we unavoidably experienced last month.
+I understand why peoples choose the security of their site over diversity of the internet, but that still **unintentionally increases the criticality of a single company to the internet**. therefore giving the control over content policing to a single company, and one simple outage can cause a worldwide disruption, as we unavoidably experienced last month.
 
 # The "Content Policing" Trends
 
